First commited as before_62483_rev2